Updates to landingpage css, temporary fix for footer alignment

--- a/CSS/landing_style.css
+++ b/CSS/landing_style.css
@@ -31,7 +31,7 @@ a {
 nav {
     position: absolute;
     right: 10px;
-    top: 20;
+    top: 10;
 }
 
 nav ul {
@@ -56,7 +56,7 @@ nav ul {
   font-weight: 100;    
   font-size: 20px;
   text-decoration: none;
-  color: #4CAF50;
+  color: lightgray;
   transition-duration: 0.4s;
 
 }
@@ -235,14 +235,16 @@ footer {
 .footer-container {
     float: right;
     position: absolute;
+    right: 30px;
 }
 
 .footer-image {
     display: inline-block;
     vertical-align: top;
     padding-top: 30px;
-    padding-right:70px;
+    padding-right: 70px;
     padding-left: 20px;
+    height: 100px;
 }
 
 .footer-image p {
@@ -251,11 +253,12 @@ footer {
     padding-top: 6px;
     padding-left: 10px;
     font-size: 35px;
+    font-weight: 200;
 }
     
 .footer-lists {
     display: inline-block;
-    min-width: 300px;
+    //min-width: 300px;
     display: flex;
     position: relative;
     float: right;
@@ -266,13 +269,13 @@ footer {
 .footer-list-left {
     display: inline-block;
     padding-right: 20px;
-    vertical-align:top;
+    vertical-align: top;
     
 }
 .footer-list-right {
     display: inline-block;
     padding-left: 50px;
-    margin-right: 100px;
+    margin-right: 30px;
 }
 
 .footer-item {
